# template-repo

./: .gitignore  install.js  install.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.docs/: agent.md  ai-novel-design.md  electron-design.md  shadcn-ui-design.md  shadcn-ui-standalone-design.md
api-server/: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TEST.md  docker-compose.yml  nest-cli.json  nginx.conf  package.json  pnpm-lock.yaml  prometheus.yml  skills-lock.json  vitest.config.ts
default/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
design-template/: .eslintignore  .eslintrc.json  README.md  package.json  pnpm-lock.yaml
electron-app/: .gitignore  .ncurc.json  .prettierignore  README.md  agent.md  electron-builder.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  turbo.json  vitest.config.ts
full-monorepo/: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  deploy.sh  docker-compose.yml  eslint.config.js  netlify.toml  package.json  pnpm-lock.yaml  skills-lock.json
full-monorepo/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
full-monorepo/apps/desktop/src-tauri/capabilities/: default.json
full-monorepo/apps/desktop/src-tauri/src/: lib.rs  main.rs
micro-frontend-starter/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.build.json
monorepo/: .gitignore  AGENTS.md  README.md  eslint.config.js  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.json  (+7 more)
(+369 files in other folders)
